@@ -2606,3 +2606,9 @@ Replaced manual parsing cli_search() with u.parse_search().
 Tweaked how u.DynamicKeywordSuggester() gets the completer
 to also work in a full-screen application.
 
+*****
+
+Revamped the 'tag search' of the browser to a general search toolbar
+which allows to search and display subsets of the entries
+categorized by authors/years/tags/etc.
+
